WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85031
Antialias single-edge solid borders
https://bugs.webkit.org/show_bug.cgi?id=85031
Summary
Antialias single-edge solid borders
David Barr
Reported
2012-04-26 23:30:31 PDT
Downstream bug:
http://crbug.com/105422
Arrow is badly antialiased (see screenshot), here is CSS code to reproduce. <html> <head> <style> .arrow-right { width: 0; height: 0; border-top: 19px solid transparent; border-bottom: 19px solid transparent; border-left: 61px solid purple; position: absolute; margin-top: 0px; display: inline; } </style> </head> <body> <div class="arrow-right"></div> <body>
Attachments
Patch
(6.85 KB, patch)
2012-04-26 23:32 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-03
(6.16 MB, application/zip)
2012-04-27 23:23 PDT
,
WebKit Review Bot
no flags
Details
Patch
(15.11 KB, patch)
2012-05-03 18:56 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Patch
(15.19 KB, patch)
2012-05-03 19:34 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Patch for landing
(15.35 KB, patch)
2012-05-03 20:54 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
David Barr
Comment 1
2012-04-26 23:32:03 PDT
Created
attachment 139137
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-27 23:23:20 PDT
Comment on
attachment 139137
[details]
Patch
Attachment 139137
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/12553503
New failing tests: fast/block/float/016.html fast/css/border-solid-single-edge-antialias.html
WebKit Review Bot
Comment 3
2012-04-27 23:23:26 PDT
Created
attachment 139341
[details]
Archive of layout-test-results from ec2-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-03 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Simon Fraser (smfr)
Comment 4
2012-05-03 17:20:06 PDT
Comment on
attachment 139137
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=139137&action=review
> Source/WebCore/rendering/RenderBoxModelObject.cpp:1863 > + int edgesVisible = 4;
I'd rename this numEdgesVisible or visibleEdgeCount.
David Barr
Comment 5
2012-05-03 18:56:17 PDT
Created
attachment 140145
[details]
Patch
WebKit Review Bot
Comment 6
2012-05-03 18:59:38 PDT
Attachment 140145
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 LayoutTests/platform/mac/test_expectations.txt:170: Path does not exist. fast/dom/Window/window-properties.html [test/expectations] [5] LayoutTests/platform/mac/test_expectations.txt:171: Path does not exist. fast/dom/prototype-inheritance-2.html [test/expectations] [5] Total errors found: 2 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Barr
Comment 7
2012-05-03 19:34:17 PDT
Created
attachment 140150
[details]
Patch
David Barr
Comment 8
2012-05-03 20:21:13 PDT
Addressed comments, updated test expectations.
Simon Fraser (smfr)
Comment 9
2012-05-03 20:38:01 PDT
Comment on
attachment 140150
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140150&action=review
> Source/WebCore/ChangeLog:8 > + > + Reviewed by NOBODY (OOPS!). > + > + Test: fast/css/border-solid-single-edge-antialias.html
Need some description of the change here, saying why we normally don't antialias, and why it's OK to in this case.
David Barr
Comment 10
2012-05-03 20:54:11 PDT
Created
attachment 140155
[details]
Patch for landing Updated ChangeLogs
WebKit Review Bot
Comment 11
2012-05-03 22:51:55 PDT
Comment on
attachment 140155
[details]
Patch for landing Clearing flags on attachment: 140155 Committed
r116069
: <
http://trac.webkit.org/changeset/116069
>
WebKit Review Bot
Comment 12
2012-05-03 22:52:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug