Antialias single-edge solid borders https://bugs.webkit.org/show_bug.cgi?id=85031

Patch by David Barr <davidbarr@chromium.org> on 2012-05-03
Reviewed by Simon Fraser.

Source/WebCore:

Antialiasing is avoided for adjacent edges due to artifacts at the seam.
There are no such artifacts for single-edge borders so enable antialiasing.

Test: fast/css/border-solid-single-edge-antialias.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintBorder):

LayoutTests:

* fast/css/border-solid-single-edge-antialias-expected.png: Added.
* fast/css/border-solid-single-edge-antialias-expected.txt: Added.
* fast/css/border-solid-single-edge-antialias.html: Added.
* platform/chromium/test_expectations.txt:
* platform/efl/test_expectations.txt:
* platform/gtk/test_expectations.txt:
* platform/mac/test_expectations.txt:
* platform/qt/test_expectations.txt:
* platform/win/test_expectations.txt:

Canonical link: https://commits.webkit.org/103142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116069 268f45cc-cd09-0410-ab3c-d52691b4dbfc